# CognitiveRouting

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: execution_logs.md
docs/superpowers/tasks/: 2026-04-20-phase2-execution-board.md
src/cognitive_routing/: __init__.py  config.py  demo_phase1.py  embeddings.py  personas.py  router.py  store.py
src/cognitive_routing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cognitive_routing/content_engine/: __init__.py  combat.py  graph.py  llm.py  models.py  tools.py
src/cognitive_routing/demos/: __init__.py  full_pipeline.py  phase1.py  phase2.py  phase3.py
src/cognitive_routing/pipeline/: __init__.py  full_pipeline.py
src/cognitive_routing/prompts/: combat_prompts.py  engine_prompts.py
src/cognitive_routing/routing/: __init__.py  embeddings.py  personas.py  router.py  store.py
tests/: test_content_combat.py  test_content_graph.py  test_content_llm.py  test_content_models.py  test_content_tools.py  test_embeddings.py  test_full_pipeline.py  test_personas.py  test_router.py  test_store.py
