[project]
name = "cognitive-routing"
version = "0.1.0"
description = "Phase 1 persona router for Grid07"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "mistralai>=1.0.0",
    "pydantic>=2.7.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
